--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "happy-dom": "^20.5.0",
     "jsdom": "^28.0.0",
     "typescript": "^5.6.3",
     "vite": "^5.4.11",
