--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "ethers": "^6.13.4",
+    "moralis": "^2.27.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
