--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -27,6 +27,7 @@
     "jsdom": "^28.0.0",
     "typescript": "^5.6.3",
     "vite": "^5.4.11",
+    "vite-plugin-node-polyfills": "^0.25.0",
     "vitest": "^4.0.18"
   }
 }
